# tui

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
example/: main.cpp
include/: CMakeLists.txt
include/tui/: container.h  decorator.h  decorators.h  divider.h  hlayout.h  node.h  presenter.h  text.h  token.h  vlayout.h
src/: CMakeLists.txt  block.cpp  block.h  container.cpp  decorator.cpp  decorator.h  decorators.cpp  decorators.h  decorators.tpp  divider.h  factory.cpp  factory.h  node.h  presenter.cpp  presenter.h  text.cpp  text.h  token.cpp  token.h  traits.h
